<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Zp1-tX-188">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Paulsens Outside" translatesAutoresizingMaskIntoConstraints="NO" id="PDG-vP-NbC">
                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
...
Saturday : 10:00am - 2:00pm

https://www.paulsenspharmacy.com

4246 NE Sandy Blvd, Portland, OR
...
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                    </view>
                    <navigationItem key="navigationItem" title="About" id="DHn-kS-Cf7"/>
                    <connections>
                        <outlet property="aboutTextView" destination="mIr-c1-4Ae" id="8dl-L3-s2W"/>
...
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" red="0.7725490196" green="0.60784313729999995" blue="0.27058823529999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <state key="normal" title="Log In">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </view>
                    <navigationItem key="navigationItem" title="Home" id="sSR-DL-le2">
                        <barButtonItem key="rightBarButtonItem" id="qRu-fJ-z9A">
                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="Bza-Qf-NPF">
...
                                </constraints>
                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="18"/>
                                <state key="normal" title="Settings" image="XcodeGear"/>
                                <connections>
                                    <segue destination="19S-uU-fn0" kind="show" id="8Cq-xW-bgj"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email address" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="4tj-c5-6ku">
                                <rect key="frame" x="60" y="261" width="252" height="30"/>
                                <constraints>
...
                                </connections>
                            </switch>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="W7N-qE-jxu">
                                <rect key="frame" x="60" y="299" width="252" height="30"/>
                                <constraints>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                <state key="normal" title="Cancel">
                                    <color key="titleColor" red="0.25098039220000001" green="0.25098039220000001" blue="0.27058823529999998" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
        <scene sceneID="g06-yF-uUd">
            <objects>
                <viewController title="Create Account" id="K1h-S1-ycJ" customClass="AccountCreationViewController" customModule="CoreApplicationPrototype" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="DsY-hx-0Uc"/>
...
        <scene sceneID="TJh-3S-jbE">
            <objects>
                <tableViewController storyboardIdentifier="History" id="AIq-ZC-cah" userLabel="History" customClass="HistoryViewController" customModule="CoreApplicationPrototype" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="355" sectionHeaderHeight="28" sectionFooterHeight="28" id="R4a-oM-xeM">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
...
                                        <rect key="frame" x="0.0" y="445.5" width="302" height="42.5"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                        <state key="normal" title="[X]">
                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Rewards" id="pQ1-7D-bmc">
                        <barButtonItem key="backBarButtonItem" title="Back" id="Ibt-5q-Lev"/>
                    </navigationItem>
...
        <scene sceneID="3ct-q0-x5n">
            <objects>
                <viewController title="Edit Account" id="u5I-Ea-zlm" customClass="EditAccountViewController" customModule="CoreApplicationPrototype" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="zoR-6T-ISn"/>
...
                                <color key="backgroundColor" red="0.7725490196" green="0.60784313729999995" blue="0.27058823529999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="Online Prescription">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
