...
        // Completion: do something after alert is displayed
        present(alert, animated: true, completion: nil)  // Display Alert
    }
    
    // Safari Transfer confirmation
    @IBAction func url() {
        let inputTitle   = "WEBSITE TRANSFER"
        let inputMessage = "Do you want to open this website in Safari?"
        
        let link = "https://www.paulsenspharmacy.com"
        // Action Handler to open URL
        let yesButton = UIAlertAction(title: "YES", style: UIAlertActionStyle.default, handler: {(action: UIAlertAction) -> Void in
            UIApplication.shared.open(NSURL(string: link)! as URL)
...
        
        createAlert(title: inputTitle, message: inputMessage, action: yesButton)
    }
    
    // Map Transfer confirmation
    @IBAction func address() {
        let inputTitle   = "MAP TRANSFER"
        let inputMessage = "Do you want to open this address in Maps?"
        
        // Open Apple Maps to show directions
        let yesButton = UIAlertAction(title: "YES", style: UIAlertActionStyle.default, handler: {(action: UIAlertAction) -> Void in
           self.map()
        })
...
