...
            if !isError {
                var newProducts = [Product]()
                for dict in dailyDealsList! {
                    newProducts.append(Product(title: dict["title"] as! String,
                                        description: dict["description"] as! String,
                                        cost: dict["cost"] as! Int,
                                        image: UIImage(named: "640x360_advil")!,
                                        id: dict["id"] as! Int))
                }
                self.products = newProducts
            } else {
                DispatchQueue.main.async(execute: { () -> Void in
                    let appDelegate = UIApplication.shared.delegate as! AppDelegate
...
